--- a/index.html
+++ b/index.html
@@ -5,6 +5,159 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header header-footer-font">
+      <nav class="menu">
+        <ul class="circle-list menu">
+          <li class="no_style">главная</li>
+          <li>
+            <a href=""> посмотреть лоты </a>
+          </li>
+          <li>
+            <a href=""> об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="logo_header">
+        <img src="./images/logo-black.svg" height="105" width="130" alt="" />
+      </a>
+      <address class="address header-footer-font">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <img src="./images/cover.jpg" class="cover-image" />
+        <div class="cover-title cover-title-font">
+          <p class="cover-title-start">
+            <span class="letter-space-mid">О</span
+            ><span class="letter-space-big">Н</span>О
+          </p>
+          <p class="cover-title-mid">
+            <span class="letter-space-mid">ТЕ</span
+            ><span class="letter-space-big">Б</span>Е
+          </p>
+          <p class="cover-title-end">
+            <span class="letter-space-big">Н</span
+            ><span class="letter-space-mid">АД</span>О
+          </p>
+        </div>
+        <div class="cover-bottom">
+          <p class="cover-bottom-font">
+            <span class="word-space-bigger"
+              >Аукцион вещей,<span class="word-space-big"> </span
+            ></span>
+            <span class="letter-space-biggest"
+              >в<span class="word-space-big">которые </span></span
+            >
+            <span class="word-space-bigger"> никто не </span>
+            <span class="word-space-big"> верил</span>
+          </p>
+          <button class="cover-button cover-bottom-font">Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots">
+        <h1 class="lot-title">Лоты</h1>
+        <ul class="card-list no_style">
+          <li>
+            <article class="card">
+              <img class="card-image" src="./images/card-lot-01.jpg" />
+              <h2 class="card-title">
+                Фильм режиссёра, который бросил киношколу
+              </h2>
+              <p class="card-text">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+            </article>
+          </li>
+          <li>
+            <article class="card">
+              <img class="card-image" src="./images/card-lot-02.jpg" />
+              <h2 class="card-title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </h2>
+              <p class="card-text">
+                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                переходами на древнеанглийский. В ней одновременно
+                рассказывается о 16 июня 1904 года и об истории литературы,
+                начиная с античных времён. И это всё накладывается на эпическую
+                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
+                Джойса?
+              </p>
+            </article>
+          </li>
+          <li>
+            <article class="card">
+              <img class="card-image" src="./images/card-lot-03.jpg" />
+              <h2 class="card-title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </h2>
+              <p class="card-text">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                котиков... Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?
+              </p>
+            </article>
+          </li>
+        </ul>
+        <a href="#0" class="lot-more">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about-column">
+          <div class="about-circle">
+            <img src="./images/logo-white.svg" class="about-image" />
+          </div>
+        </div>
+        <div>
+          <h1 class="about-title">Об аукционе</h1>
+          <p class="about-text">
+            <span class="about-ls-lower">Здесь вы не встретите очередное</span> пафосное собрание невероятно
+            дорогого антиквариата. <span class="about-ls-low">Наши </span><span class="about-ls-lower">лоты вообще не</span> должны <span class="about-ls-lowest">были попасть</span> ни на
+            один <span class="about-ls-lower">аукцион.</span> Потому что кому нужен <span class="about-ls-low3">дневник</span> девочки-подростка или
+            картина, которую может <span class="about-ls-low">нарисовать</span> <span class="about-ls-lower">даже</span> ребёнок? Кому нужны <span class="about-ls-lower">все эти
+            странныевещи, созданные</span>  любителями?
+          </p>
+          <p class="about-text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то <span class="about-ls-low4">они </span> казались просто <span class="about-ls-lower"> неудачными.</span> Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            <span class="about-ls-lower">представить современную культуру.</span> Когда в эти вещи не верил никто,
+            продолжали верить <span class="about-ls-lower">их создатели.</span> И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="address header-footer-font address-start">
+        <a href="#0">+9 999 555 5555</a>
+        <a href="#0">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+      <nav class="footer-menu">
+        <ul class="no_style">
+          <li class="">главная</li>
+          <li>
+            <a href=""> посмотреть лоты </a>
+          </li>
+          <li>
+            <a href=""> об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <div class = "footer-socials">
+        <img src="./images/yt.svg" class="social-image" />
+        <img src="./images/vk.svg" class="social-image" />
+        <img src="./images/pinterest.svg" class="social-image" />
+      </div>
+    </footer>
+  </body>
 </html>
