--- a/index.html
+++ b/index.html
@@ -119,19 +119,31 @@
         <div>
           <h1 class="about-title">Об аукционе</h1>
           <p class="about-text">
-            <span class="about-ls-lower">Здесь вы не встретите очередное</span> пафосное собрание невероятно
-            дорогого антиквариата. <span class="about-ls-low">Наши </span><span class="about-ls-lower">лоты вообще не</span> должны <span class="about-ls-lowest">были попасть</span> ни на
-            один <span class="about-ls-lower">аукцион.</span> Потому что кому нужен <span class="about-ls-low3">дневник</span> девочки-подростка или
-            картина, которую может <span class="about-ls-low">нарисовать</span> <span class="about-ls-lower">даже</span> ребёнок? Кому нужны <span class="about-ls-lower">все эти
-            странныевещи, созданные</span>  любителями?
+            <span class="about-ls-lower">Здесь вы не встретите очередное</span>
+            пафосное собрание невероятно дорогого антиквариата.
+            <span class="about-ls-low">Наши </span
+            ><span class="about-ls-lower">лоты вообще не</span> должны
+            <span class="about-ls-lowest">были попасть</span> ни на один
+            <span class="about-ls-lower">аукцион.</span> Потому что кому нужен
+            <span class="about-ls-low3">дневник</span> девочки-подростка или
+            картина, которую может <span class="about-ls-low">нарисовать</span>
+            <span class="about-ls-lower">даже</span> ребёнок? Кому нужны
+            <span class="about-ls-lower">все эти странныевещи, созданные</span>
+            любителями?
           </p>
           <p class="about-text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то <span class="about-ls-low4">они </span> казались просто <span class="about-ls-lower"> неудачными.</span> Но, несмотря на критику,
-            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
-            <span class="about-ls-lower">представить современную культуру.</span> Когда в эти вещи не верил никто,
-            продолжали верить <span class="about-ls-lower">их создатели.</span> И сейчас эти лоты стали культовыми.
+            Когда-то <span class="about-ls-low4">они </span> казались просто
+            <span class="about-ls-lower"> неудачными.</span> Но, несмотря на
+            критику, кажущуюся простоту или сложность, сейчас без этих лотов
+            невозможно
+            <span class="about-ls-lower"
+              >представить современную культуру.</span
+            >
+            Когда в эти вещи не верил никто, продолжали верить
+            <span class="about-ls-lower">их создатели.</span> И сейчас эти лоты
+            стали культовыми.
           </p>
         </div>
       </section>
@@ -153,7 +165,7 @@
           </li>
         </ul>
       </nav>
-      <div class = "footer-socials">
+      <div class="footer-socials">
         <img src="./images/yt.svg" class="social-image" />
         <img src="./images/vk.svg" class="social-image" />
         <img src="./images/pinterest.svg" class="social-image" />
