--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <a class="logo_header">
-        <img src="./images/logo-black.svg" height="105" width="130" alt="" />
+        <img src="./images/logo-black.svg" height="105" width="130" alt="/images/logo-black.svg" />
       </a>
       <address class="address header-footer-font">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -33,7 +33,7 @@
     </header>
     <main>
       <section class="cover">
-        <img src="./images/cover.jpg" class="cover-image" />
+        <img src="./images/cover.jpg" class="cover-image" alt="/images/cover.jpg"/>
         <div class="cover-title cover-title-font">
           <p class="cover-title-start">
             <span class="letter-space-mid">О</span
@@ -67,7 +67,7 @@
         <ul class="card-list no_style">
           <li>
             <article class="card">
-              <img class="card-image" src="./images/card-lot-01.jpg" />
+              <img class="card-image" src="./images/card-lot-01.jpg"  alt="/images/card-lot-01.jpg" />
               <h2 class="card-title">
                 Фильм режиссёра, который бросил киношколу
               </h2>
@@ -79,7 +79,7 @@
           </li>
           <li>
             <article class="card">
-              <img class="card-image" src="./images/card-lot-02.jpg" />
+              <img class="card-image" src="./images/card-lot-02.jpg"  alt="/images/card-lot-02.jpg"/>
               <h2 class="card-title">
                 Книга, где описан один скучный день из жизни рекламного агента
               </h2>
@@ -95,7 +95,7 @@
           </li>
           <li>
             <article class="card">
-              <img class="card-image" src="./images/card-lot-03.jpg" />
+              <img class="card-image" src="./images/card-lot-03.jpg"  alt="/images/card-lot-03.jpg"/>
               <h2 class="card-title">
                 Картина, которую повторит даже 5-летний сын маминой подруги
               </h2>
@@ -113,7 +113,7 @@
       <section class="about">
         <div class="about-column">
           <div class="about-circle">
-            <img src="./images/logo-white.svg" class="about-image" />
+            <img src="./images/logo-white.svg" class="about-image"  alt="/images/logo-white.svg"/>
           </div>
         </div>
         <div>
@@ -166,9 +166,9 @@
         </ul>
       </nav>
       <div class="footer-socials">
-        <img src="./images/yt.svg" class="social-image" />
-        <img src="./images/vk.svg" class="social-image" />
-        <img src="./images/pinterest.svg" class="social-image" />
+        <img src="./images/yt.svg" class="social-image" alt="/images/yt.svg"/>
+        <img src="./images/vk.svg" class="social-image" alt="/images/vk.svg"/>
+        <img src="./images/pinterest.svg" class="social-image" alt="/images/pinterest.svg"/>
       </div>
     </footer>
   </body>
