--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <header class="header header-footer-font">
+    <header class="header edges-font">
       <nav class="menu">
         <ul class="circle-list menu">
-          <li class="no_style">главная</li>
+          <li class="no_style">
+            <a href="" class="no_underline">главная</a>
+          </li>
           <li>
             <a href=""> посмотреть лоты </a>
           </li>
@@ -23,9 +25,14 @@
         </ul>
       </nav>
       <a class="logo_header">
-        <img src="./images/logo-black.svg" height="105" width="130" alt="/images/logo-black.svg" />
+        <img
+          src="./images/logo-black.svg"
+          height="105"
+          width="130"
+          alt="лого"
+        />
       </a>
-      <address class="address header-footer-font">
+      <address class="address edges-font">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
@@ -33,21 +40,34 @@
     </header>
     <main>
       <section class="cover">
-        <img src="./images/cover.jpg" class="cover-image" alt="/images/cover.jpg"/>
-        <div class="cover-title cover-title-font">
-          <p class="cover-title-start">
+        <!--  <img src="./images/cover.jpg" class="cover-image" alt="обложка" />
+          <div class="overlay"></div>
+        <h1 class="cover-title cover-title-font">
+          <span class="aligned-text"
+            >о<span class="letter-spacing-extended">но</span></span
+          >
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">бе</span></span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">н</span>ад<span class="remove-spacing">о</span></span
+          >
+        </h1>-->
+        <div class="overlay"></div>
+        <h1 class="cover-title cover-title-font">
+          <span class="cover-title-start">
             <span class="letter-space-mid">О</span
             ><span class="letter-space-big">Н</span>О
-          </p>
-          <p class="cover-title-mid">
-            <span class="letter-space-mid">ТЕ</span
-            ><span class="letter-space-big">Б</span>Е
-          </p>
-          <p class="cover-title-end">
+          </span>
+          <span class="cover-title-mid">
+            <span class="letter-space-mid">ТЕБ</span >
+           <span class="letter-space-big">Е</span>          
+          </span>
+          <span class="cover-title-end">
             <span class="letter-space-big">Н</span
-            ><span class="letter-space-mid">АД</span>О
-          </p>
-        </div>
+            ><span class="letter-space-mid">АД</span><span class="remove-spacing">о</span>
+          </span>
+        </h1>
         <div class="cover-bottom">
           <p class="cover-bottom-font">
             <span class="word-space-bigger"
@@ -63,49 +83,56 @@
         </div>
       </section>
       <section class="lots">
-        <h1 class="lot-title">Лоты</h1>
+        <h2 class="lot-title">Лоты</h2>
         <ul class="card-list no_style">
           <li>
-            <article class="card">
-              <img class="card-image" src="./images/card-lot-01.jpg"  alt="/images/card-lot-01.jpg" />
-              <h2 class="card-title">
-                Фильм режиссёра, который бросил киношколу
-              </h2>
-              <p class="card-text">
-                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-              </p>
-            </article>
+            <a class="card-link" href="#0">
+              <article class="card card-film">
+                <div class="overlay"></div>               
+                <h3 class="card-title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card-text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article></a
+            >
           </li>
           <li>
-            <article class="card">
-              <img class="card-image" src="./images/card-lot-02.jpg"  alt="/images/card-lot-02.jpg"/>
-              <h2 class="card-title">
-                Книга, где описан один скучный день из жизни рекламного агента
-              </h2>
-              <p class="card-text">
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-                переходами на древнеанглийский. В ней одновременно
-                рассказывается о 16 июня 1904 года и об истории литературы,
-                начиная с античных времён. И это всё накладывается на эпическую
-                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
-                Джойса?
-              </p>
-            </article>
+            <a class="card-link" href="#0">
+              <article class="card card-book">
+                <div class="overlay"></div>              
+                <h3 class="card-title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card-text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article></a
+            >
           </li>
           <li>
-            <article class="card">
-              <img class="card-image" src="./images/card-lot-03.jpg"  alt="/images/card-lot-03.jpg"/>
-              <h2 class="card-title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-              </h2>
-              <p class="card-text">
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                котиков... Сколько бы вы на такое поставили, если бы не знали,
-                что это — одна из революционных работ Кандинского?
-              </p>
-            </article>
+            <a class="card-link" href="#0">
+              <article class="card card-picture">
+                <div class="overlay"></div>             
+                <h3 class="card-title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card-text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article></a
+            >
           </li>
         </ul>
         <a href="#0" class="lot-more">посмотреть больше</a>
@@ -113,11 +140,15 @@
       <section class="about">
         <div class="about-column">
           <div class="about-circle">
-            <img src="./images/logo-white.svg" class="about-image"  alt="/images/logo-white.svg"/>
+            <img
+              src="./images/logo-white.svg"
+              class="about-image"
+              alt="лого белое"
+            />
           </div>
         </div>
         <div>
-          <h1 class="about-title">Об аукционе</h1>
+          <h2 class="about-title">Об аукционе</h2>
           <p class="about-text">
             <span class="about-ls-lower">Здесь вы не встретите очередное</span>
             пафосное собрание невероятно дорогого антиквариата.
@@ -125,7 +156,7 @@
             ><span class="about-ls-lower">лоты вообще не</span> должны
             <span class="about-ls-lowest">были попасть</span> ни на один
             <span class="about-ls-lower">аукцион.</span> Потому что кому нужен
-            <span class="about-ls-low3">дневник</span> девочки-подростка или
+            <span class="about-ls-lowt">дневник</span> девочки-подростка или
             картина, которую может <span class="about-ls-low">нарисовать</span>
             <span class="about-ls-lower">даже</span> ребёнок? Кому нужны
             <span class="about-ls-lower">все эти странныевещи, созданные</span>
@@ -134,7 +165,7 @@
           <p class="about-text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то <span class="about-ls-low4">они </span> казались просто
+            Когда-то <span class="about-ls-lowf">они </span> казались просто
             <span class="about-ls-lower"> неудачными.</span> Но, несмотря на
             критику, кажущуюся простоту или сложность, сейчас без этих лотов
             невозможно
@@ -149,9 +180,9 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address header-footer-font address-start">
-        <a href="#0">+9 999 555 5555</a>
-        <a href="#0">info@sobaka.ge</a>
+      <address class="address edges-font address-start">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="footer-menu">
@@ -166,9 +197,13 @@
         </ul>
       </nav>
       <div class="footer-socials">
-        <img src="./images/yt.svg" class="social-image" alt="/images/yt.svg"/>
-        <img src="./images/vk.svg" class="social-image" alt="/images/vk.svg"/>
-        <img src="./images/pinterest.svg" class="social-image" alt="/images/pinterest.svg"/>
+        <img src="./images/yt.svg" class="social-image" alt="лого ютуб" />
+        <img src="./images/vk.svg" class="social-image" alt="лого вк" />
+        <img
+          src="./images/pinterest.svg"
+          class="social-image"
+          alt="лого принтерест"
+        />
       </div>
     </footer>
   </body>
