--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@
             ><span class="letter-space-big">Н</span>О
           </span>
           <span class="cover-title-mid">
-            <span class="letter-space-mid">ТЕБ</span >
-           <span class="letter-space-big">Е</span>          
+            <span class="letter-space-mid">ТЕБ</span>
+            <span class="letter-space-big">Е</span>
           </span>
           <span class="cover-title-end">
             <span class="letter-space-big">Н</span
-            ><span class="letter-space-mid">АД</span><span class="remove-spacing">о</span>
+            ><span class="letter-space-mid">АД</span
+            ><span class="remove-spacing">о</span>
           </span>
         </h1>
         <div class="cover-bottom">
@@ -88,7 +89,7 @@
           <li>
             <a class="card-link" href="#0">
               <article class="card card-film">
-                <div class="overlay"></div>               
+                <div class="overlay"></div>
                 <h3 class="card-title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
@@ -103,7 +104,7 @@
           <li>
             <a class="card-link" href="#0">
               <article class="card card-book">
-                <div class="overlay"></div>              
+                <div class="overlay"></div>
                 <h3 class="card-title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
@@ -121,7 +122,7 @@
           <li>
             <a class="card-link" href="#0">
               <article class="card card-picture">
-                <div class="overlay"></div>             
+                <div class="overlay"></div>
                 <h3 class="card-title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
