--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href=""> посмотреть лоты </a>
           </li>
           <li>
-            <a href=""> об аукционе</a>
+            <a href="">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -60,8 +60,7 @@
             ><span class="letter-space-big">Н</span>О
           </span>
           <span class="cover-title-mid">
-            <span class="letter-space-mid">ТЕБ</span>
-            <span class="letter-space-big">Е</span>
+            <span class="letter-space-mid">ТЕ<span class="letter-space-big">БЕ</span></span>            
           </span>
           <span class="cover-title-end">
             <span class="letter-space-big">Н</span
@@ -87,23 +86,22 @@
         <h2 class="lot-title">Лоты</h2>
         <ul class="card-list no_style">
           <li>
-            <a class="card-link" href="#0">
-              <article class="card card-film">
+            <a class="card-link no_underline" href="#0">
+              <article class="card card-film card-image ">
                 <div class="overlay"></div>
                 <h3 class="card-title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
-                <p class="card-text">
+                <p class="card-text ">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
                 </p>
-              </article></a
-            >
+              </article></a>
           </li>
           <li>
-            <a class="card-link" href="#0">
-              <article class="card card-book">
+            <a class="card-link no_underline" href="#0">
+              <article class="card card-book card-image ">
                 <div class="overlay"></div>
                 <h3 class="card-title">
                   Книга, где описан один скучный день из жизни рекламного агента
@@ -120,8 +118,8 @@
             >
           </li>
           <li>
-            <a class="card-link" href="#0">
-              <article class="card card-picture">
+            <a class="card-link no_underline" href="#0">
+              <article class="card card-picture card-image ">
                 <div class="overlay"></div>
                 <h3 class="card-title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
@@ -129,7 +127,7 @@
                 <p class="card-text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  котиков<span class="card-letter-space">...</span> Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
               </article></a
@@ -160,7 +158,7 @@
             <span class="about-ls-lowt">дневник</span> девочки-подростка или
             картина, которую может <span class="about-ls-low">нарисовать</span>
             <span class="about-ls-lower">даже</span> ребёнок? Кому нужны
-            <span class="about-ls-lower">все эти странныевещи, созданные</span>
+            <span class="about-ls-lower">все эти странные вещи, созданные</span>
             любителями?
           </p>
           <p class="about-text">
@@ -198,13 +196,9 @@
         </ul>
       </nav>
       <div class="footer-socials">
-        <img src="./images/yt.svg" class="social-image" alt="лого ютуб" />
-        <img src="./images/vk.svg" class="social-image" alt="лого вк" />
-        <img
-          src="./images/pinterest.svg"
-          class="social-image"
-          alt="лого принтерест"
-        />
+        <a href=""><img src="./images/yt.svg" class="social-image" alt="лого ютуб" /></a>
+        <a href=""><img src="./images/vk.svg" class="social-image" alt="лого вк" /></a>
+        <a href=""><img src="./images/pinterest.svg" class="social-image" alt="лого принтерест"/></a>
       </div>
     </footer>
   </body>
